| Summary: | ASTERISK-22626: ARI: Starting a recording with invalid format does not report error or failure | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2013-10-01 15:32:25 | Date Closed: | 2013-10-25 17:03:01 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | 12.0.0-alpha1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If recording is started on a channel or bridge and an invalid format is specified no error is returned to the consumer. The recording, however, does fail to occur. | ||
| Comments: | |||