ARI: channel/bridge recording errors when invalid format specified

Asterisk will now issue 422 if recording is requested against channels
or bridges with an unknown format

(closes issue ASTERISK-22626)
Reported by: Joshua Colp
Review: https://reviewboard.asterisk.org/r/2939/


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/12@402001 65c4cc65-6c06-0410-ace0-fbb531ad65f3