res/ari/resource_channels.c
@@ -407,6 +407,13 @@ void ast_ari_record_channel(struct ast_variable *headers,
 		return;
 	}
 
+	if (!ast_get_format_for_file_ext(options->format)) {
+		ast_ari_response_error(
+			response, 422, "Unprocessable Entity",
+			"specified format is unknown on this system");
+		return;
+	}
+
 	recording = stasis_app_control_record(control, options);
 	if (recording == NULL) {
 		switch(errno) {
