res/res_ari_bridges.c
@@ -745,6 +745,7 @@ static void ast_ari_record_bridge_cb(
 	case 400: /* Invalid parameters */
 	case 404: /* Bridge not found */
 	case 409: /* Bridge is not in a Stasis application; A recording with the same name already exists on the system and can not be overwritten because it is in progress or ifExists=fail */
+	case 422: /* The format specified is unknown on this system */
 		is_valid = 1;
 		break;
 	default:
